--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "chat-server",
+  "name": "subzero-chat-server",
   "version": "1.0.0",
+  "description": "Echtzeit Chat-Server für Neocities",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
-  },
-  "scripts": {
-    "start": "node index.js"
   }
 }
